objects/ComparisonPlan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <inlineHelpText>Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comparison Plans</relationshipLabel>
        <relationshipName>Comparison_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnualDeductibleIndividual__c</fullName>
        <label>Annual Deductible (Individual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>Display Client ID on Comparison Plan</description>
        <formula>Account__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display Client ID on Comparison Plan</inlineHelpText>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Display latest opportunity status date on comparison plan object</description>
        <formula>Account__r.Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display latest opportunity status date on comparison plan object</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CoInsurance__c</fullName>
        <label>Co-Insurance (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M/D/V/D</fullName>
                </value>
                <value>
                    <fullName>M/D/V</fullName>
                </value>
                <value>
                    <fullName>Med Only</fullName>
                </value>
                <value>
                    <fullName>Chiro</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dental+</fullName>
                </value>
                <value>
                    <fullName>M/D+Dental</fullName>
                </value>
                <value>
                    <fullName>M/D/V/Ch</fullName>
                </value>
                <value>
                    <fullName>M/D/V/Ch/AC</fullName>
                </value>
                <value>
                    <fullName>M/D/V/D+</fullName>
                </value>
                <value>
                    <fullName>M/D/V/D+/CAM</fullName>
                </value>
                <value>
                    <fullName>M/D/V/D+/Ch</fullName>
                </value>
                <value>
                    <fullName>M/D/V/D+/Ch/Ac</fullName>
                </value>
                <value>
                    <fullName>M/D/V/D/Ch</fullName>
                </value>
                <value>
                    <fullName>M/D/V/D/CH/AC</fullName>
                </value>
                <value>
                    <fullName>M/V+CAM</fullName>
                </value>
                <value>
                    <fullName>M/V/D</fullName>
                </value>
                <value>
                    <fullName>MDV+CAM</fullName>
                </value>
                <value>
                    <fullName>MDVD+CAM</fullName>
                </value>
                <value>
                    <fullName>Med+CAM</fullName>
                </value>
                <value>
                    <fullName>Med+Ch</fullName>
                </value>
                <value>
                    <fullName>Med+Ch/Ac</fullName>
                </value>
                <value>
                    <fullName>Med/Dental+/CAM</fullName>
                </value>
                <value>
                    <fullName>Med + Dental</fullName>
                </value>
                <value>
                    <fullName>Medical + Drug</fullName>
                </value>
                <value>
                    <fullName>Medical/Dental +</fullName>
                </value>
                <value>
                    <fullName>M/V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeCountEC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EE Count EC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeCountES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EE Count ES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeCountF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EE Count F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeCountS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EE Count S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployerContributionEC__c</fullName>
        <label>Contribution EC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmployerContributionES__c</fullName>
        <label>Contribution ES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmployerContributionF__c</fullName>
        <label>Contribution F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmployerContributionS__c</fullName>
        <label>Contribution S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Opportunity_Status__c</fullName>
        <description>Display latest opportunity status on comparison plan object</description>
        <formula>Account__r.Open_Opportunity_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display latest opportunity status on comparison plan object</inlineHelpText>
        <label>Latest Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeVisitCopay__c</fullName>
        <label>Office Visit Copay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity</description>
        <inlineHelpText>Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comparison Plans</relationshipLabel>
        <relationshipName>Comparison_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutofpocketMaxexcludingdeductible__c</fullName>
        <label>Out-of-pocket Max (excluding deductible)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior24EC__c</fullName>
        <label>2yr Prior Rate EC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior24ES__c</fullName>
        <label>2yr Prior Rate ES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior24F__c</fullName>
        <label>2yr Prior Rate F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior24S__c</fullName>
        <label>2yr Prior Rate S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProServicePlanName__c</fullName>
        <formula>IF(NOT(ISNULL(ProServicePlan__c)), ProServicePlan__r.SBQQ__ProductName__c,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProService Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProServicePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProService Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__QuoteLine__c.SBQQ__Quote__c</field>
                <operation>equals</operation>
                <valueField>$Source.Quote__c</valueField>
            </filterItems>
            <filterItems>
                <field>SBQQ__QuoteLine__c.SBQQ__ProductFamily__c</field>
                <operation>equals</operation>
                <value>Healthcare,Dental</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Comparison Plans</relationshipLabel>
        <relationshipName>Comparison_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Comparison Plans</relationshipLabel>
        <relationshipName>Comparison_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RateEC__c</fullName>
        <label>Current Rate EC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RateES__c</fullName>
        <label>Current Rate ES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RateEffectiveDate__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RateF__c</fullName>
        <label>Current Rate F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RateS__c</fullName>
        <label>Current Rate S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent12EC__c</fullName>
        <label>1yr Prior Rate EC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent12ES__c</fullName>
        <label>1yr Prior Rate ES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent12F__c</fullName>
        <label>1yr Prior Rate F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent12S__c</fullName>
        <label>1yr Prior Rate S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx1__c</fullName>
        <label>Rx 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx2__c</fullName>
        <label>Rx 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx3__c</fullName>
        <label>Rx 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalNumberEnrolled__c</fullName>
        <formula>EmployeeCountEC__c + EmployeeCountES__c + EmployeeCountF__c + EmployeeCountS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Time Total Number Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year1Increase__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year 1</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year2Increase__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year 2</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year3Increase__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year 3</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Comparison Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comparison Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>